SP-738: Fix p alignment in Notes block

--- a/sugarcrm/styleguide/less/clients/portal/block.less
+++ b/sugarcrm/styleguide/less/clients/portal/block.less
@@ -43,10 +43,6 @@
   margin-bottom: 10px;
 }
 
-.block.tabs-left .nav-tabs p {
-  margin: -18px 80px 20px 55px;
-}
-
 .block.tabs-left .nav-tabs li li .avatar {
   margin: 3px 0 0;
 }
